# Framex

./: README.md  guide.txt  pyproject.toml  test.py  testing.py  things to add.txt
.github/workflows/: pypi-publish.yml
Framex/: README.md  __init__.py  main.py  module_testing.py  pyproject.toml  testing.py
Framex (OLD - BROKEN)/: __init__.py  main.py
Framex (OLD - BROKEN)/core/: __init__.py  window.py
Framex (OLD - BROKEN)/entities/: entities.py  groups.py
Framex (OLD - BROKEN)/utils/: config.py  debug.py  text.py
Framex/core/: __init__.py  loop.py  window.py
Framex/entities/: __init__.py  entities.py  groups.py
Framex/physics/: __init__.py  collisions.py
Framex/src/entities/: __init__.py  camera.py  entities.py  groups.py
Framex/src/frame/: __init__.py  camera.py  loop.py  window.py
Framex/src/framex_ce.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Framex/src/utils/: __init__.py  config.py  factory.py  imports.py
Framex/utils/: __init__.py  config.py  debug.py  factories.py  imports.py
docs/: docs.md
